force-app/main/default/objects/Connector_Config_Value__c/Connector_Config_Value__c.object-meta.xml
<CustomObject>
    <description>Non-secret connector configuration values. Raw credentials, OAuth tokens, webhook secrets, and private keys must not be stored here.</description>
    <label>Connector Config Value</label>
    <nameField>
        <label>Config Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connector Config Values</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>