force-app/main/default/objects/Connector_Config_Value__c/fields/Connector_Instance__c.field-meta.xml
<CustomField>
    <fullName>Connector_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connector Instance</label>
    <referenceTo>Connector_Instance__c</referenceTo>
    <relationshipLabel>Connector Config Values</relationshipLabel>
    <relationshipName>Connector_Config_Values</relationshipName>
    <type>Lookup</type>
</CustomField>