force-app/main/default/objects/Connector_Config_Value__c/fields/Is_Secret_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Secret_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True only when Value stores a reference name, not a secret value.</description>
    <label>Is Secret Reference</label>
    <type>Checkbox</type>
</CustomField>