force-app/main/default/objects/Connector_Config_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Connector_Instance__c</columns>
    <columns>Is_Secret_Reference__c</columns>
    <columns>Field_Key__c</columns>
    <columns>Value__c</columns>
    <columns>Connector_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>